Fixed glyphs, navbar overlap, and added content to family history page. Also fixed a few typos.

--- a/files/fam_history.html
+++ b/files/fam_history.html
@@ -54,7 +54,7 @@
 						</ul>
 					</li>
 					<li class="active"><a href="#">Family History</a></li>
-					<li><a href="hobbies.html">Other Interests</a></li>
+					<li><a href="hobbies.html">Hobbies</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -72,7 +72,7 @@
 				</div>
 				<div class="col-sm-10">
 					<h1>Family History</h1>
-					<h3 style="font-variant: normal;">I was blessed at birth with many talented 
+					<h3 style="font-variant: normal;">I was blessed with many talented 
 					ancestors who accomplished remarkable feats and have inspired me to work at 
 					becoming the best possible version of myself.</h3>
 				</div>
@@ -94,8 +94,8 @@
 				100 years later as the United States was celebrating the centennial of their 
 				achievement, I had the honor of travelling the country and seeing the significance 
 				of the industry they had started. This gave me the opportunity to meet aerospace 
-				pioneers like Chuck Yeager and Neil Armstrong when at a very young age, 
-				and I credit these meetings with setting me down the path to becoming an engineer.</p>
+				pioneers like Chuck Yeager and Neil Armstrong at a very young age, and it was these 
+				national heroes that inspired me to become an engineer.</p>
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/orv&wil.jpg"
@@ -107,8 +107,20 @@
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
 				<h2 class="featurette-heading">Minnesota's First Brewery</h2>
-				<p class="lead">Anthony Yoerg: Keith's Great-Great-Great Grandfather????</p>
-				<p>More info here.</p>
+				<p class="lead">Anthony Yoerg: Keith's Great-Great-Great Grandfather</p>
+				<p>Anthony Yoerg was born in Bavaria on October 5<sup>th</sup>, 1816 
+				and immigrated to the United States when he was 19 years old. After 
+				moving around the country for a few years he ultimately settled in 
+				Minnesota. It was there in 1848 that he opened the first brewery in 
+				the state, Yoerg's Brewery.</p>
+				<p>The brewery remained in business during prohibition in the 1900s by 
+				pivoting to a dairy & soda soda operation. After prohibition was repealed 
+				the company attempted to continue selling beer, however consolidation of 
+				beer producers across the country made it extremely difficult to stay 
+				profitable and the company closed for business in 1952.</p>
+				<p>This history has inspired me to brew my own beer at home, and I plan 
+				to improve my skill and create beers similar to the ones that my ancestor 
+				sold so skillfully.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
 				<img class="featurette-image img-responsive center-block" src="../images/yoerg_cart.jpg"
@@ -121,7 +133,18 @@
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Engineering Heritage</h2>
 				<p class="lead">William Yoerg & Ken Yoerg: Keith's Grandfather & Father</p>
-				<p>More info here.</p>
+				<p>My grandfather Bill was the first person in his family to receive a degree. 
+				He studied civil engineering at South Dakota State University, and following 
+				graduation he took a job working for the Minnesota Department of Transportation 
+				in 1959. He worked there until his early death in September 1990. His work 
+				influenced many policies within the Mn/DOT and in honor of his efforts, September 
+				20<sup>th</sup> was named "Bill Yoerg Quality Recognition Day"</p>
+				<p>My father Ken also decided to become an engineer, and earned a bachelor's 
+				degree in Chemical Engineering from the University of Minnesota in 1983. Soon 
+				after he began working for <a href="http://www.cargill.com/" target="_blank"
+				data-toggle="tooltip" title"cargill.com">Cargill</a>, a global company that 
+				provides agricultural products and services. He continues to work at Cargill 
+				as he has for more than 25 years.</p>
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/grandpa.jpg"
