--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -54,7 +54,7 @@
 						</ul>
 					</li>
 					<li><a href="fam_history.html">Family History</a></li>
-					<li class="active"><a href="#">Other Interests</a></li>
+					<li class="active"><a href="#">Hobbies</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -110,7 +110,7 @@
 				<img class="fourth-slide" src="../images/exercise.jpg" alt="10k Run">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#exercise" role="button">Exercise</a></p>
+						<p><a class="btn btn-lg btn-info" href="#exercise" role="button">Athletics</a></p>
 					</div>
 				</div>
 			</div>
@@ -133,18 +133,17 @@
 			<div class="col-md-7">
 				<h2 class="featurette-heading">USC Trojan Marching Band</h2>
 				<p class="lead">Drum Major & Trumpet TA</p>
-				<p>I began playing the trumpet at 10 years old, and continued to play through college and after. 
+				<p>I began playing the trumpet at 10 years old. 
 				While a student at the University of Southern California, I joined the <a href="http://www.usc.edu/dept/band/"
-				target="_blank" data-toggle="tooltip" title="www.usc.edu/dept/band">Trojan Marching Band</a>, and remained a 
-				member of the band for 7 years.</p>
+				target="_blank" data-toggle="tooltip" title="www.usc.edu/dept/band">Trojan Marching Band</a>.</p>
 				<p>I held many leadership positions while in band, including having the honor of leading the 300+ person 
 				orginization as the Drum Major. The Drum Major is the most visible student leader on campus, tasked with 
 				carrying the sword at football games and stabbing the field before directing the band's pregame performance.</p>
-				<p>TMB Leadership Timeline (fall seasons):
+				<p>TMB Leadership Timeline:
 					<ul>
-						<li>2011: Trumpet Section Leader</li>
-						<li>2012: Drum Major</li>
-						<li>'13-'14: Trumpet Teaching Assistant</li>
+						<li>'11-'12: Trumpet Section Leader</li>
+						<li>'12-'13: Drum Major</li>
+						<li>'13-'15: Trumpet Teaching Assistant</li>
 					<ul>
 				
 			</div>
@@ -160,7 +159,7 @@
 				<h2 class="featurette-heading">Home Gardening</h2>
 				<p class="lead">Grow LA Victory Gardener</p>
 				<p>In the spring of 2015 a single mint plant affectionately named "Marty" laid the groundwork for a passion that 
-				is continuing to grow. I have been consistently growing vegitables and herbs on my balcony ever since, and 
+				is continuing to grow. I have been consistently growing vegetables and herbs on my balcony ever since, and 
 				have even helped many friends start their own gardens as well.</p>
 				<p>Recently I completed a gardening class taught by certified Master Gardeners, and I continue to do personal 
 				research to increase the yield from my crops. I'm excited to one day own a home with a yard so I can plant crops 
