--- a/files/contact.html
+++ b/files/contact.html
@@ -53,7 +53,7 @@
 						</ul>
 					</li>
 					<li><a href="fam_history.html">Family History</a></li>
-					<li><a href="hobbies.html">Other Interests</a></li>
+					<li><a href="hobbies.html">Hobbies</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#"><span class="glyphicon glyphicon-envelope"></span>
