--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</ul>
 					</li>
 					<li><a href="files/fam_history.html">Family History</a></li>
-					<li><a href="files/hobbies.html">Other Interests</a></li>
+					<li><a href="files/hobbies.html">Hobbies</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="files/contact.html"><span class="glyphicon glyphicon-envelope"></span>
