--- a/files/contact.html
+++ b/files/contact.html
@@ -73,65 +73,19 @@
 	<!-- Main Content -->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
-				<h1 id="center">Contact Links Here<h1>
-				<h3>Include LinkedIn & Facebook as icons</h3>
-				<h3> Have a picture of myself & email address, maybe current location?</h3>
+			<div class="col-md-6" style="padding: 20px;">
+				<h1 id="center">E-mail Keith:</h1>
+				<h3 id="center"><a href="mailto:keithyoerg@gmail.com" target="_top">
+				keithyoerg@gmail.com</a></h3>
 			</div>
-			<div class="col-md-6">
-				<form class="form-horizontal" role="form" method="post" action="contact.php">
-					<div class="form-group">
-						<label for="first_name" class="col-sm-3 control-label">First Name *</label>
-						<div class="col-sm-9">
-							<input type="text" class="form-control" id="first_name" name="first_name"
-							placeholder="First Name" value="<?php echo htmlspecialchars($_POST['first_name']);?>">
-							<?php echo "<p class='text-danger'>$errFName</p>";?>
-						</div>
+			<div class="col-md-6" style="padding: 20px;">
+				<h1 id="center">Keith on Social Media:</h1>
+					<div class="col-md-12" id="center">
+						<a href="https://www.linkedin.com/in/keith-yoerg-526537105" target="_blank">
+						<img src="../images/linkedin.png" border="0" alt="LinkedIn" width="150" height="150">
+						<a href="https://www.facebook.com/kyoerg" target="_blank">
+						<img src="../images/facebook.png" border="0" alt="Facebook" width="150" height="150">
 					</div>
-					<div class="form-group">
-						<label for="last_name" class="col-sm-3 control-label">Last Name *</label>
-						<div class="col-sm-9">
-							<input type="text" class="form-control" id="last_name" name="last_name"
-							placeholder="Last Name" value="<?php echo htmlspecialchars($_POST['last_name']); ?>">
-							<?php echo "<p class='text-danger'>$errLName</p>";?>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="email" class="col-sm-3 control-label">E-Mail *</label>
-						<div class="col-sm-9">
-							<input type="email" class="form-control" id="email" name="email"
-							placeholder="example@gmail.com" value="<?php echo htmlspecialchars($_POST['email']); ?>">
-							<?php echo "<p class='text-danger'>$errEmail</p>";?>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="message" class="col-sm-3 control-label">Message *</label>
-						<div class="col-sm-9">
-							<textarea class="form-control" rows="4" name="message"><?php echo htmlspecialchars($_POST['message']);?></textarea>
-							<?php echo "<p class='text-danger'>$errMessage</p>";?>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="human" class="col-sm-3 control-label">2 + 3 = ? *</label>
-						<div class="col-sm-9">
-							<input type="text" class="form-control" id="human" name="human"
-							placeholder="Your Answer">
-							<?php echo "<p class='text-danger'>$errHuman</p>";?>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9 col-sm-offset-3">
-							<input id="submit" name="submit" type="submit" value="Send" class="btn btn-info">
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9 col-sm-offset-3">
-							<?php echo $result; ?>
-						</div>
-					</div>
-				</form>
-				<div class="col-sm-9 col-sm-offset-3">
-					<p>*Required Information</p>
 				</div>
 			</div>
 		</div>
