--- a/files/fam_history.html
+++ b/files/fam_history.html
@@ -94,8 +94,8 @@
 				100 years later as the United States was celebrating the centennial of their 
 				achievement, I had the honor of travelling the country and seeing the significance 
 				of the industry they had started. This gave me the opportunity to meet aerospace 
-				pioneers like Chuck Yeager and Neil Armstrong at a very young age, and it was these 
-				national heroes that inspired me to become an engineer.</p>
+				pioneers like Chuck Yeager and Neil Armstrong at a very young age, and inspired me 
+				to work on continuing their legacy by becoming an engineer myself.</p>
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/orv&wil.jpg"
