--- a/files/fam_history.html
+++ b/files/fam_history.html
@@ -92,7 +92,7 @@
 				<p>On December 17<sup>th</sup>, 1903 my ancestors successfully flew the first 
 				sustained, controlled, powered heavier-than-air flight in a manned aircraft. 
 				100 years later as the United States was celebrating the centennial of their 
-				achievement, I had the honor of travelling the country and seeing the significance 
+				achievement, I had the honor of traveling the country and seeing the significance 
 				of the industry they had started. This gave me the opportunity to meet aerospace 
 				pioneers like Chuck Yeager and Neil Armstrong at a very young age, and inspired me 
 				to work on continuing their legacy by becoming an engineer myself.</p>
