--- a/files/skills.html
+++ b/files/skills.html
@@ -217,7 +217,7 @@
 						<ul class="bullets">
 							<li>Python</li>
 							<li>QuickBooks</li>
-							<li>Systems Tol Kit (STK)</li>
+							<li>Systems Tool Kit (STK)</li>
 						</ul>
 					</div>
 				</div>
