Added logo to header & updated elementary curriculum text.

--- a/files/flare.html
+++ b/files/flare.html
@@ -72,9 +72,15 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			<h1 style="padding-top: 15px;">Future Leaders of Advanced Rocket Engineering (FLARE) Program ADD FLARE LOGO</h1>
+			<h1 style="padding-top: 15px;">Future Leaders of Advanced Rocket Engineering</h1>
 		</div>
-		<div class="container-fluid" style="width: 80%;">
+		<div 
+		<figure>
+			<img src="../images/flare_logo.jpg"
+			alt="FLARE logo" width="275" height="175" style="margin-left: auto; margin-right: auto; 
+			display: block; padding-bottom: 15px;">
+		</figure>
+		<div class="container-fluid">
 			<p>In 2016 I was introduced to a local non-profit organization called <a href="http://www.tamuseum.org/"
 			target="_blank" data-toggle="tooltip" title="www.tamuseum.org">Tomorrow's Aeronautical Museum</a> 
 			(TAM) at the Compton airport. I loved TAM's mission to support the education of inner city kids, 
@@ -88,7 +94,7 @@
 			developed curricula for multiple age groups:
 			</p>
 			
-			<ul style="text-align: center; list-style-type: none;">
+			<ul style="text-align: center; width: 95%; list-style-type: none;">
 				<li> <a href="#elementary">Elementary School</a></li>
 				<li> <a href="#middle">Middle School</a></li>
 				<li> <a href="#high">High School</a></li>
@@ -103,21 +109,23 @@
 		<hr class="featurette-divider" id="elementary">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">Elementary Age Curriculum</h2>
+				<h2 class="featurette-heading">Elementary Curriculum (K-6)</h2>
 				<p class="lead">Rocketry Basics</p>
-				<p>Building rockets to fly in the California desert is a very fulfilling hobby.
-				Construction allows me to hone my mechanical skills, and I get to be creative when painting.</p>
-				<p>Of course the ultimate payoff is lighting the fire and watching it soar. This video shows my
-				Level 1 Certification launch. I built the rocket from a Madcow Torrent kit and dubbed it "Charlie Horse."
-				It flew on a Cesaroni 225I Motor and reached roughly 3,000 ft altitude.</p>
-				<p>The rocket was recovered without damage and is being prepped for a Level 2 Certification flight
-				early next year, which will include a flight computer and dual chute deployment. I hope to design and
-				build my next high power rocket from scratch.</p>
+				<p>Rocketry classes for kids grades K-6 are focused on fun. 
+				Every class includes time playing <a href="https://kerbalspaceprogram.com/en/" 
+				target="_blank" data-toggle="tooltip" title="kerbalspaceprogram.com"> Kerbal Space Program</a>, 
+				a rocket design, building, and flying simulator. Knowledge of real-life rocket properties like 
+				center of mass and center of pressure are crucial to creating a successful rocket in the game.</p>
+				<p>Instruction time focuses on how knowledge of STEM ideas such as the scientific method and 
+				Newton's Laws can improve rocket designs in the Kerbal video game. Alka-seltzer rockets and other 
+				demonstrations are used to keep students engaged and discuss scientific principles.</p>
+				<p>The capstone of each K-6 program is building and flying Estes model rockets, which the kids 
+				get to keep (assuming it survives the maiden voyage)!</p>
 			</div>
 
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/launch.jpg"
-				alt="Launch of Estes rocket with TAM students">
+				alt="Launch of Estes rocket with TAM students" style="padding-top: 30px;">
 			</div>
 		</div>
 	
