Updated nav bar, copywrite date, shifted focus to include rocketry and updated certifications.

--- a/files/fam_history.html
+++ b/files/fam_history.html
@@ -38,23 +38,35 @@
 						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="education.html">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="academic_proj.html">Academic Projects</a></li>
 							<li><a href="skills.html">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
+					<li class="active"><a href="#">Family History</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="projects.html">Projects
+						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="academic_proj.html">Academic</a></li>
-							<li><a href="personal_proj.html">Personal</a></li>
+							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
-					<li class="active"><a href="#">Family History</a></li>
-					<li><a href="hobbies.html">Hobbies</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" 
+						href="hobbies.html">Other Interests
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
+							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
+							<li><a href="hobbies.html#USCBand">USC Band</a></li>
+							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -143,8 +155,7 @@
 				degree in Chemical Engineering from the University of Minnesota in 1983. Soon 
 				after he began working for <a href="http://www.cargill.com/" target="_blank"
 				data-toggle="tooltip" title"cargill.com">Cargill</a>, a global company that 
-				provides agricultural products and services. He continues to work at Cargill 
-				as he has for more than 25 years.</p>
+				provides agricultural products and services, where he worked for nearly 30 years.</p>
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/grandpa.jpg"
@@ -162,7 +173,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2016 Keith Yoerg</p>
+			<p>&#169; 2020 Keith Yoerg</p>
 		</div>
 	</footer>
 	
