--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -38,23 +38,35 @@
 						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="education.html">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="academic_proj.html">Academic Projects</a></li>
 							<li><a href="skills.html">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
+					<li><a href="fam_history.html">Family History</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="projects.html">Projects
+						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="academic_proj.html">Academic</a></li>
-							<li><a href="personal_proj.html">Personal</a></li>
+							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
-					<li><a href="fam_history.html">Family History</a></li>
-					<li class="active"><a href="#">Hobbies</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" 
+						href="#">Other Interests
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#3DPrint">3D Printing</a></li>
+							<li><a href="#Scuba">Scuba Diving</a></li>
+							<li><a href="#USCBand">USC Band</a></li>
+							<li><a href="#Homebrew">Brewing Beer</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -128,7 +140,7 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider" id="TMB">
+		<hr class="featurette-divider" id="USCBand">
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">USC Trojan Marching Band</h2>
@@ -171,7 +183,7 @@
 			</div>
 		</div>
 		
-		<hr class="featurette-divider" id="beer">
+		<hr class="featurette-divider" id="Homebrew">
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Brewing Beer</h2>
@@ -218,7 +230,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2016 Keith Yoerg</p>
+			<p>&#169; 2020 Keith Yoerg</p>
 		</div>
 	</footer>
 	
