--- a/files/personal_proj.html
+++ b/files/personal_proj.html
@@ -136,7 +136,7 @@
 			<div class="col-md-5">
 				<div class="embed-responsive embed-responsive-16by9">
 					<video controls allowfullscreen>
-						<source src="../images/Launch.mp4" type="video/mp4" autoplay="0">
+						<source src="../images/Launch.mov">
 					</video>
 				</div>
 			</div>
