--- a/files/portfolio.html
+++ b/files/portfolio.html
@@ -34,18 +34,38 @@
 					<li><a href="../index.html">Home</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="#">Portfolio
+						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="education.html">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
-							<li><a href="skills.html">Skills & Certifications</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="academic_proj.html">Academic Projects</a></li>
+							<li><a href="skills.html">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
-					<li><a href="projects.html">Projects</a></li>
 					<li><a href="fam_history.html">Family History</a></li>
-					<li><a href="hobbies.html">Hobbies</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown"
+						href="rocketry.html">Rocketry
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+							<li><a href="flare.html">Education & Outreach</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" 
+						href="hobbies.html">Other Interests
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
+							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
+							<li><a href="hobbies.html#USCBand">USC Band</a></li>
+							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -73,7 +93,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2016 Keith Yoerg</p>
+			<p>&#169; 2020 Keith Yoerg</p>
 		</div>
 	</footer>
 	
