--- a/files/skills.html
+++ b/files/skills.html
@@ -38,23 +38,35 @@
 						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="education.html">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="academic_proj.html">Academic Projects</a></li>
 							<li class="active"><a href="#">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
+					<li><a href="fam_history.html">Family History</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="projects.html">Projects
+						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="academic_proj.html">Academic</a></li>
-							<li><a href="personal_proj.html">Personal</a></li>
+							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
-					<li><a href="fam_history.html">Family History</a></li>
-					<li><a href="hobbies.html">Hobbies</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" 
+						href="hobbies.html">Other Interests
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
+							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
+							<li><a href="hobbies.html#USCBand">USC Band</a></li>
+							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -90,10 +102,10 @@
 				<div class="col-md-6">
 					<div class="panel panel-default">
 						<div class="panel-heading" id="center">
-							<h3 id="title">Engineer-In-Training</h3>
-							<h4><a href="http://ncees.org/" target="_blank" data-toggle="tooltip"
-							title="www.ncees.org">NCEES</a></h4>
-							<h5>Earned July 2016</h5>
+							<h3 id="title">Professional Engineer</h3>
+							<h4><a href="https://www.bpelsg.ca.gov/" target="_blank" data-toggle="tooltip"
+							title="www.ncees.org">BPELSG</a></h4>
+							<h5>Earned May 2020</h5>
 						</div>
 						<div class="panel-body">
 							<img class="center-block" src="../images/Engineer.jpg"
@@ -127,10 +139,10 @@
 							<h3 id="title">High Power Rocketry</h3>
 							<h4><a href="http://www.tripoli.org/" target="_blank" data-toggle="tooltip"
 							title="www.tripoli.org">Tripoli Rocketry Association</a></h4>
-							<h5>Earned August 2016</h5>
+							<h5>Level 2 Since June 2017</h5>
 						</div>
 						<div class="panel-body" style="padding-bottom: 16.6%;;">
-							<img class="center-block" src="../images/Tripoli.jpeg"
+							<img class="center-block" src="../images/Tripoli.jpg"
 							alt="Tripoli Level 1 Cert" id="fit">
 						</div>
 					</div>
@@ -167,11 +179,13 @@
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
+							<li>Noise and Vibration Field Measurements</li>
+							<li>Noise Modeling Software: TNM, CadnaA, Excel</li>
+							<li>MATLAB and Octave Signal Processing</li>
+							<li>ArcGIS Geospatial Databases</li>
+							<li>Public Speaking & Presentations</li>
 							<li>Microsoft Office (Excel, Word, PowerPoint)</li>
-							<li>Machine Shop Proficient</li>
-							<li>Technical Report Creation</li>
 							<li>Leadership</li>
-							<li>Public Speaking & Presentations</li> 
 						</ul>
 					</div>
 				</div>
@@ -183,14 +197,10 @@
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
-							<li>CAD Design & Analysis
-								<ul>
-									<li>SolidWorks</li>
-									<li>Pro/E</li>
-								</ul>
-							</li>
-							<li>MATLAB</li>
+							<li>3D Printing</li>
+							<li>SolidWorks</li>
 							<li>LabVIEW</li>
+							<li>Machine Shop Proficiency</li>
 							<li>Database Systems
 								<ul>
 									<li>MySQL</li>
@@ -218,6 +228,8 @@
 							<li>Python</li>
 							<li>QuickBooks</li>
 							<li>Systems Tool Kit (STK)</li>
+							<li>Ham Radio Operation</li>
+							<li>Electronics Board Soldering</li>
 						</ul>
 					</div>
 				</div>
@@ -232,7 +244,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2016 Keith Yoerg</p>
+			<p>&#169; 2020 Keith Yoerg</p>
 		</div>
 	</footer>
 	
