--- a/files/contact.html
+++ b/files/contact.html
@@ -37,23 +37,35 @@
 						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="education.html">Education</a></li>
 							<li><a href="professional.html">Professional Experience</a></li>
+							<li><a href="education.html">Education</a></li>
+							<li><a href="academic_proj.html">Academic Projects</a></li>
 							<li><a href="skills.html">Certifications & Skills</a></li>
 							<li><a href="resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
+					<li><a href="fam_history.html">Family History</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="projects.html">Projects
+						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="academic_proj.html">Academic</a></li>
-							<li><a href="personal_proj.html">Personal</a></li>
+							<li><a href="hpr.html">High Power Solids</a></li>
+							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
+							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
-					<li><a href="fam_history.html">Family History</a></li>
-					<li><a href="hobbies.html">Hobbies</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" 
+						href="hobbies.html">Other Interests
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="hobbies.html#3DPrint">3D Printing</a></li>
+							<li><a href="hobbies.html#Scuba">Scuba Diving</a></li>
+							<li><a href="hobbies.html#USCBand">USC Band</a></li>
+							<li><a href="hobbies.html#Homebrew">Brewing Beer</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#"><span class="glyphicon glyphicon-envelope"></span>
@@ -81,7 +93,7 @@
 			<div class="col-md-6" style="padding: 20px;">
 				<h1 id="center">Keith on Social Media:</h1>
 					<div class="col-md-12" id="center">
-						<a href="https://www.linkedin.com/in/keith-yoerg-526537105" target="_blank">
+						<a href="https://www.linkedin.com/in/keith-yoerg" target="_blank">
 						<img src="../images/linkedin.png" border="0" alt="LinkedIn" width="150" height="150">
 						<a href="https://www.facebook.com/kyoerg" target="_blank">
 						<img src="../images/facebook.png" border="0" alt="Facebook" width="150" height="150">
@@ -94,7 +106,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2016 Keith Yoerg</p>
+			<p>&#169; 2020 Keith Yoerg</p>
 		</div>
 	</footer>
 	
