--- a/index.html
+++ b/index.html
@@ -34,26 +34,38 @@
 					<li class="active"><a href="#">Home</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="files/portfolio.html">Portfolio
+						href="portfolio.html">Portfolio
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="files/education.html">Education</a></li>
 							<li><a href="files/professional.html">Professional Experience</a></li>
+							<li><a href="files/education.html">Education</a></li>
+							<li><a href="files/academic_proj.html">Academic Projects</a></li>
 							<li><a href="files/skills.html">Certifications & Skills</a></li>
 							<li><a href="files/resume.pdf">Resume as .pdf</a></li>
 						</ul>
 					</li>
+					<li><a href="files/fam_history.html">Family History</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown"
-						href="files/projects.html">Projects
+						href="rocketry.html">Rocketry
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="files/academic_proj.html">Academic</a></li>
-							<li><a href="files/personal_proj.html">Personal</a></li>
+							<li><a href="files/hpr.html">High Power Solids</a></li>
+							<li><a href="files/liquid_rockets.html">Liquid Engines</a></li>
+							<li><a href="files/flare.html">Education & Outreach</a></li>
 						</ul>
 					</li>
-					<li><a href="files/fam_history.html">Family History</a></li>
-					<li><a href="files/hobbies.html">Hobbies</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" 
+						href="files/hobbies.html">Other Interests
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="files/hobbies.html#3DPrint">3D Printing</a></li>
+							<li><a href="files/hobbies.html#Scuba">Scuba Diving</a></li>
+							<li><a href="files/hobbies.html#USCBand">USC Band</a></li>
+							<li><a href="files/hobbies.html#Homebrew">Brewing Beer</a></li>
+						</ul>
+					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="files/contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -78,7 +90,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2016 Keith Yoerg</p>
+			<p>&#169; 2020 Keith Yoerg</p>
 		</div>
 	</footer>
 	
